# neural-network

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: references.md
src/neural_network/: activations.py
tests/: test_sample.py
