[project]
name = "neural-network"
version = "0.1.0"
description = "A feed-forward neural network implmentation built from scratch in Python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.2",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]

[tool.black]
target-version = ['py314']

[tool.ruff]
target-version = "py314"
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.14"
strict = true
